# ugv_uav

./: .gitignore  README.md
src/gz_sensor_bridge/: CMakeLists.txt  README.md  package.xml
src/gz_sensor_bridge/launch/: sensor_bridges.launch.py
src/gz_sensor_bridge/src/: gz_camera_bridge_node.cpp  gz_lidar_bridge_node.cpp
src/ugv_description/: package.xml  setup.py
src/ugv_description/launch/: aruco_detector.launch.py  aruco_precision_landing.launch.py  lidar_local_planner.launch.py  lidar_scan_debug.launch.py  ugv_rviz_tf.launch.py
src/ugv_description/rviz/: ugv_lidar.rviz
src/ugv_description/ugv_description/: aruco_detector_node.py  aruco_precision_landing_node.py  laser_scan_to_pointcloud_node.py  lidar_local_planner_node.py  lidar_scan_debug_node.py  px4_odometry_tf_node.py
src/ugv_description/urdf/: explorer_rover.urdf
