<?xml version="1.0"?>
<package format="3">
  <name>gz_sensor_bridge</name>
  <version>0.0.1</version>
  <description>Direct Gazebo Transport to ROS 2 sensor bridge nodes for UAV camera and UGV lidar topics.</description>
  <maintainer email="dong@example.com">dong</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
